fix: resolve RTL layout issues in LESS

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -136,6 +136,11 @@
     .cp-admin-support-state {
         i {
             margin-right: @sidebar_base-margin;
+
+            [dir='rtl'] & {
+                margin-right: unset;
+                margin-left: @sidebar_base-margin;
+            }
         }
     }
 }
