Implement last review fixes #1831

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -181,6 +181,9 @@
             position: relative;
             .cp-markdown-toggle-button {
                 .markdown-toolbar-button-style() !important;
+                &.cp-toolbar-button-active {
+                    background-color: transparent !important;
+                }
             }
         }
 
