--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -136,6 +136,9 @@
         right: 0;
         top: 50%;
         transform: translateY(-50%);
+        &.cp-toolbar-button-active {
+            background-color: transparent;
+        }
     } 
 
     #cp-kanban-edit-body {
