Remove extra spaces #1831

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -211,7 +211,7 @@
             display: none;
             .cp-markdown-toolbar {
                 max-width: 31rem;
-                background-color: #323232;
+                background-color: @cp_toolbar-bg;
                 border-radius: @variables_radius @variables_radius 0 0;
             }
         }
