--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -5,6 +5,7 @@
  */
 
 @import (reference) './avatar.less';
+@import (reference) './badges.less';
 @import (reference) "./colortheme-all.less";
 
 .messenger_vars (
@@ -163,7 +164,6 @@
             }
             .cp-app-contacts-muted-button {
                 margin: 10px;
-                border: 0;
                 display: none;
                 order: 3;
                 .fa-bell-slash {
@@ -192,7 +192,7 @@
     }
 
     #cp-app-contacts-friendlist .cp-app-contacts-friend, #cp-app-contacts-messaging .cp-avatar {
-        .avatar_main(30px);
+        .avatar_main(35px);
         &.cp-avatar {
             display: flex;
         }
@@ -256,15 +256,20 @@
                 }
             }
 
-            .cp-avatar,
+            .cp-avatar-container,
             .cp-app-contacts-right-col {
                  flex: 1 1 auto;
+                 text-align: center;
             }
             .cp-app-contacts-remove-history {
                 .hover;
             }
+            .cp-avatar-container {
+                display: flex;
+                align-items: center;
+            }
             .cp-avatar {
-                margin: 10px;
+                margin: 0 10px;
             }
             .cp-app-contacts-more-history {
                 //display: none;
