--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -8,6 +8,7 @@
 @import (reference) '../../customize/src/less2/include/sidebar-layout.less';
 @import (reference) '../../customize/src/less2/include/variables.less';
 @import (reference) '../../customize/src/less2/include/badges.less';
+@import (reference) '../../customize/src/less2/include/avatar.less';
 
 &.cp-app-profile {
 
@@ -70,13 +71,15 @@
         max-height: 300px;
         margin-bottom: 3.5rem;
         &> span {
-            display: inline-block;
+            .avatar_main(300px);
+            display: flex;
             text-align: center;
             border-radius: 4px;
-            overflow: hidden;
+            overflow: visible;
             position: relative;
             .cp-app-profile-avatar-delete {
                 right: 0;
+                top: 0;
                 position: absolute;
                 opacity: 1;
                 &:hover {
