Fix profile description max-width

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -309,7 +309,7 @@
             }
             .cp-settings-profile-description {
                 width: 31rem;
-                max-width: 31rem;
+                max-width: 100%;
                 .cp-labelled-input {
                     max-width: 100% !important;
                     width: 100% !important;
