add correct color to links in lists #1190

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -699,7 +699,7 @@
                     }
 
                     .cp-form-block-content {
-                        p {
+                        p, ul {
                             a {
                                 color: @cryptpad_color_link;
                             }
