change heading color #1643

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -288,7 +288,7 @@
                         margin-bottom: 10px;
                     }
                     .cp-form-setting-title {
-                        color: @cryptpad_color_link;
+                        font-weight: bold;
                     }
                 }
 
