make choice menu accessible via keyboard #1964

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -339,6 +339,9 @@
                 .cp-form-block-type {
                     &.editable {
                         cursor: pointer;
+                        &:focus-visible {
+                            outline: @variables_focus_style;
+                        }
                     }
                     .fa-caret-down {
                         margin-left: 5px;
