add outline to inputs

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -773,6 +773,9 @@
                             padding: 0 10px !important;
                             height: auto;
                             font-size: 20px;
+                            &:focus-visible {
+                                outline: @variables_focus_style;
+                            }
                         }
                         button {
                             .cp-form-edit {
