add margin to radio buttons

--- a/customize.dist/src/less2/include/checkmark.less
+++ b/customize.dist/src/less2/include/checkmark.less
@@ -135,9 +135,11 @@
         }
 
     }
-
-    .cp-radio {
+    .dialog .cp-radio {
         margin: 0.2rem 0;
+    }
+    .cp-radio {
+        margin: 0;
         display: flex;
         align-items: center;
         position: relative;
